// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulSearch > Snapshot tests > basic search box snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-input-affix-wrapper css-dev-only-do-not-override-yotw4n delightful-input-outlined acss-9dldd5 css-var-r1 delightful-input-css-var"
  >
    <span
      class="delightful-input-prefix"
    >
      <svg
        class="tabler-icon tabler-icon-search "
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"
        />
        <path
          d="M21 21l-6 -6"
        />
      </svg>
    </span>
    <input
      class="delightful-input css-dev-only-do-not-override-yotw4n"
      placeholder="搜索..."
      type="text"
      value=""
    />
  </span>
</DocumentFragment>
`;

exports[`DelightfulSearch > Snapshot tests > large size search box snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-input-affix-wrapper delightful-input-affix-wrapper-lg css-dev-only-do-not-override-yotw4n delightful-input-outlined acss-9dldd5 css-var-r6 delightful-input-css-var"
  >
    <span
      class="delightful-input-prefix"
    >
      <svg
        class="tabler-icon tabler-icon-search "
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"
        />
        <path
          d="M21 21l-6 -6"
        />
      </svg>
    </span>
    <input
      class="delightful-input delightful-input-lg css-dev-only-do-not-override-yotw4n"
      placeholder="搜索..."
      type="text"
      value=""
    />
  </span>
</DocumentFragment>
`;

exports[`DelightfulSearch > Snapshot tests > small size search box snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-input-affix-wrapper delightful-input-affix-wrapper-sm css-dev-only-do-not-override-yotw4n delightful-input-outlined acss-9dldd5 css-var-r7 delightful-input-css-var"
  >
    <span
      class="delightful-input-prefix"
    >
      <svg
        class="tabler-icon tabler-icon-search "
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"
        />
        <path
          d="M21 21l-6 -6"
        />
      </svg>
    </span>
    <input
      class="delightful-input delightful-input-sm css-dev-only-do-not-override-yotw4n"
      placeholder="搜索..."
      type="text"
      value=""
    />
  </span>
</DocumentFragment>
`;

exports[`DelightfulSearch > Snapshot tests > search box with prefix icon snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-input-affix-wrapper css-dev-only-do-not-override-yotw4n delightful-input-outlined acss-9dldd5 css-var-r3 delightful-input-css-var"
  >
    <span
      class="delightful-input-prefix"
    >
      <span>
        🔍
      </span>
    </span>
    <input
      class="delightful-input css-dev-only-do-not-override-yotw4n"
      placeholder="搜索..."
      type="text"
      value=""
    />
  </span>
</DocumentFragment>
`;

exports[`DelightfulSearch > Snapshot tests > search box with suffix icon snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-input-affix-wrapper css-dev-only-do-not-override-yotw4n delightful-input-outlined acss-9dldd5 css-var-r4 delightful-input-css-var"
  >
    <span
      class="delightful-input-prefix"
    >
      <svg
        class="tabler-icon tabler-icon-search "
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"
        />
        <path
          d="M21 21l-6 -6"
        />
      </svg>
    </span>
    <input
      class="delightful-input css-dev-only-do-not-override-yotw4n"
      placeholder="搜索..."
      type="text"
      value=""
    />
    <span
      class="delightful-input-suffix"
    >
      <span>
        📝
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`DelightfulSearch > Snapshot tests > search box with border snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-input-affix-wrapper css-dev-only-do-not-override-yotw4n delightful-input-outlined acss-9dldd5 css-var-r8 delightful-input-css-var"
  >
    <span
      class="delightful-input-prefix"
    >
      <svg
        class="tabler-icon tabler-icon-search "
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"
        />
        <path
          d="M21 21l-6 -6"
        />
      </svg>
    </span>
    <input
      class="delightful-input css-dev-only-do-not-override-yotw4n"
      placeholder="搜索..."
      type="text"
      value=""
    />
  </span>
</DocumentFragment>
`;

exports[`DelightfulSearch > Snapshot tests > search box with default value snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-input-affix-wrapper css-dev-only-do-not-override-yotw4n delightful-input-outlined acss-9dldd5 css-var-r2 delightful-input-css-var"
  >
    <span
      class="delightful-input-prefix"
    >
      <svg
        class="tabler-icon tabler-icon-search "
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"
        />
        <path
          d="M21 21l-6 -6"
        />
      </svg>
    </span>
    <input
      class="delightful-input css-dev-only-do-not-override-yotw4n"
      type="text"
      value="默认搜索词"
    />
  </span>
</DocumentFragment>
`;

exports[`DelightfulSearch > Snapshot tests > disabled state search box snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-input-affix-wrapper delightful-input-disabled delightful-input-affix-wrapper-disabled css-dev-only-do-not-override-yotw4n delightful-input-outlined acss-9dldd5 css-var-r5 delightful-input-css-var"
  >
    <span
      class="delightful-input-prefix"
    >
      <svg
        class="tabler-icon tabler-icon-search "
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"
        />
        <path
          d="M21 21l-6 -6"
        />
      </svg>
    </span>
    <input
      class="delightful-input delightful-input-disabled css-dev-only-do-not-override-yotw4n"
      disabled=""
      placeholder="搜索..."
      type="text"
      value=""
    />
  </span>
</DocumentFragment>
`;
